# matrice-numerique

./: CMakeLists.txt  Makefile  README.md  alloc.c  alloc.h  classgui.cpp  classgui.h  free.c  free.h  free_matrix.c  free_matrix.h  free_pixel.c  free_pixel.h  gui.cpp  gui.h  main.c  main_gui.cpp  main_text.c  matrix  matrix.c  matrix.h  pixel.c  pixel.h  ppm.c  ppm.h  project  struct.h
